# paranoid

./: .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml
paranoid/: main.py
paranoid/modules/: util.py
tests/: test_paranoid.py  test_typer_basic_skeleton.py
tests/data/: account.json
tests/modules/: test_util.py
typer_basic_skeleton/: main.py
~/.paranoid/: encrypted.dat.20200524174151
