[tool.poetry]
name = "paranoid"
version = "0.1.0"
description = "Because I'm paranoid"
authors = ["Angelo Arboleda <angelo@sparkgeo.com>"]
readme = "README.md"

[tool.poetry.scripts]
paranoid = "paranoid.main:app"




[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.2.1"}
pycrypto = "^2.6.1"
pyotp = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
